--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 
 <body>
 
+    <header class="site-header">
+        <div class="header-content container">
+            <h1 class="site-title">TypeRacer</h1>
+            <button id="instructions-button" class="btn instr-btn" aria-label="Show instructions">Instructions</button>
+        </div>
+    </header>
+
+    <main class="container mt-4">
+        <!-- Typing area and game UI will be added here -->
+    </main>
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
