Add results section with elements to output level, time and WPM

--- a/index.html
+++ b/index.html
@@ -59,7 +59,14 @@
                 <!-- Right: results area (full width on small, 4/12 on md+) -->
                 <div class="col-12 col-md-4">
                     <aside class="results-area">
-                        <!-- Results card will be added here -->
+                        <div class="card results-card">
+                            <div class="card-body">
+                                <h3 class="card-title">Results</h3>
+                                <div class="results-item"><strong>Level:</strong> <span id="res-level">Easy</span></div>
+                                <div class="results-item"><strong>Time:</strong> <span id="res-time">0s</span></div>
+                                <div class="results-item"><strong>WPM:</strong> <span id="res-wpm">0</span></div>
+                            </div>
+                        </div>
                     </aside>
                 </div>
             </div>
