Update placeholder text for text input area

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                         <!-- Difficulty dropdown (Bootstrap input-group) -->
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="difficulty-label">Select Difficulty</span>
-                            <select class="form-select" id="difficulty" aria-label="Select difficulty" aria-describedby="difficulty-label">
+                            <select class="form-select" id="difficulty" aria-label="Select difficulty"
+                                aria-describedby="difficulty-label">
                                 <option value="easy">Easy</option>
                                 <option value="medium">Medium</option>
                                 <option value="hard">Hard</option>
@@ -41,11 +42,13 @@
 
                         <!-- Sample prompt text -->
                         <div class="prompt-box mb-3 p-3 bg-light border rounded">
-                            The quick brown fox jumps over the lazy dog. Practice sentences help you warm up and test typing speed.
+                            The quick brown fox jumps over the lazy dog. Practice sentences help you warm up and test
+                            typing speed.
                         </div>
 
                         <!-- Typing input area -->
-                        <textarea id="typing-area" class="form-control mb-3" rows="6" placeholder="Type the text above here..." aria-label="Typing input"></textarea>
+                        <textarea id="typing-area" class="form-control mb-3" rows="6"
+                            placeholder="Type the text above here..." aria-label="Typing input"></textarea>
 
                         <!-- Controls: Start / Stop / Retry -->
                         <div class="d-flex gap-2">
