Fix updated text

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
                         <!-- Typing input area -->
                         <textarea id="typing-area" class="form-control mb-3" rows="6"
-                            placeholder="Type the text above here..." aria-label="Typing input"></textarea>
+                            placeholder="Click the start button to begin the test" aria-label="Typing input"></textarea>
 
                         <!-- Controls: Start / Stop / Retry -->
                         <div class="d-flex gap-2">
