Add Javascript to generate 'text to type' based on difficulty

--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
                         <h2 class="prompt-heading">Test your typing speed by typing the text shown below:</h2>
 
                         <!-- Sample prompt text -->
-                        <div class="prompt-box mb-3 p-3 bg-light border rounded">
-                            The quick brown fox jumps over the lazy dog. Practice sentences help you warm up and test
-                            typing speed.
+                        <div id="prompt-box" class="prompt-box mb-3 p-3 bg-light border rounded">
+                            
                         </div>
 
                         <!-- Typing input area -->
@@ -82,6 +81,8 @@
         crossorigin="anonymous"></script>
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/e0f9b143b7.js" crossorigin="anonymous"></script>
+    <!-- App script -->
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
